--- a/pom.xml
+++ b/pom.xml
@@ -11,44 +11,44 @@
     <name>Spark Practice</name>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.frugalmechanic/scala-optparse -->
         <dependency>
             <groupId>com.frugalmechanic</groupId>
-            <artifactId>scala-optparse_2.11</artifactId>
+            <artifactId>scala-optparse_2.12</artifactId>
             <version>1.1.2</version>
         </dependency>
-        <dependency>
+
+        <!--<dependency>
             <groupId>com.tresata</groupId>
-            <artifactId>spark-sorted</artifactId>
+            <artifactId>spark-sorted_2.12</artifactId>
             <version>1.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.602</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-aws</artifactId>
-            <version>3.2.0</version>
-        </dependency>
+        </dependency>-->
+
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.8</version>
+            <version>2.12.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>2.12.9</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
-            <version>2.1.0</version>
-            <scope>provided</scope>
+            <artifactId>spark-core_2.12</artifactId>
+            <version>2.4.3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
-            <version>2.1.0</version>
-            <scope>provided</scope>
+            <artifactId>spark-sql_2.12</artifactId>
+            <version>2.4.3</version>
         </dependency>
-        <dependency>
+
+        <!--<dependency>
             <groupId>org.typelevel</groupId>
             <artifactId>frameless-dataset_2.11</artifactId>
             <version>0.8.0</version>
@@ -81,32 +81,8 @@
             <artifactId>spark-testing-base_2.11</artifactId>
             <version>2.1.0_0.6.0</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.11</artifactId>
-            <version>2.1.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-            <version>2.7.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-mapreduce-client-core</artifactId>
-            <version>2.7.2</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.pig</groupId>
-            <artifactId>pig</artifactId>
-            <version>0.14.0</version>
-            <classifier>h2</classifier>
-            <scope>provided</scope>
-        </dependency>
+        </dependency>-->
+        
     </dependencies>
 
     <build>
@@ -125,36 +101,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass/>
-                        </manifest>
-                    </archive>
-                </configuration>
             </plugin>
 
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>3.3.1</version>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
