--- a/pom.xml
+++ b/pom.xml
@@ -1,113 +1,274 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0">
+<project
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0">
 
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.practice</groupId>
-    <artifactId>spark-practice</artifactId>
-    <packaging>jar</packaging>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>Spark Practice</name>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.practice</groupId>
+  <artifactId>spark-practice</artifactId>
+  <packaging>jar</packaging>
+  <version>1.0.0-SNAPSHOT</version>
+  <name>Spark Practice</name>
 
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.frugalmechanic/scala-optparse -->
-        <dependency>
-            <groupId>com.frugalmechanic</groupId>
-            <artifactId>scala-optparse_2.12</artifactId>
-            <version>1.1.2</version>
-        </dependency>
+  <properties>
+    <spark.version>3.0.1</spark.version>
+    <embed.scala.version>2.12</embed.scala.version>
+    <scala.version>2.12.9</scala.version>
+  </properties>
 
-        <!--<dependency>
-            <groupId>com.tresata</groupId>
-            <artifactId>spark-sorted_2.12</artifactId>
-            <version>1.7.0</version>
-        </dependency>-->
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/com.frugalmechanic/scala-optparse -->
+    <dependency>
+      <groupId>com.frugalmechanic</groupId>
+      <artifactId>scala-optparse_${embed.scala.version}</artifactId>
+      <version>1.1.2</version>
+    </dependency>
 
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>2.12.9</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-compiler</artifactId>
-            <version>2.12.9</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.12</artifactId>
-            <version>2.4.3</version>
-        </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>2.14.3</version>
+    </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.12</artifactId>
-            <version>2.4.3</version>
-        </dependency>
+    <!--<dependency>
+        <groupId>com.tresata</groupId>
+        <artifactId>spark-sorted_2.12</artifactId>
+        <version>1.7.0</version>
+    </dependency>-->
 
-        <!--<dependency>
-            <groupId>org.typelevel</groupId>
-            <artifactId>frameless-dataset_2.11</artifactId>
-            <version>0.8.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.chuusai</groupId>
-            <artifactId>shapeless_2.11</artifactId>
-            <version>2.3.3</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.novocode</groupId>
-            <artifactId>junit-interface</artifactId>
-            <version>0.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
-            <version>3.0.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.holdenkarau</groupId>
-            <artifactId>spark-testing-base_2.11</artifactId>
-            <version>2.1.0_0.6.0</version>
-            <scope>test</scope>
-        </dependency>-->
-        
-    </dependencies>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-compiler</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-core_${embed.scala.version}</artifactId>
+      <version>${spark.version}</version>
+      <!--      <scope>provided</scope>-->
+    </dependency>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
-            </plugin>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.6</version>
+    </dependency>
 
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>3.3.1</version>
-            </plugin>
-        </plugins>
-    </build>
+    <dependency>
+      <groupId>org.zeroturnaround</groupId>
+      <artifactId>zt-zip</artifactId>
+      <version>1.14</version>
+      <type>jar</type>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${embed.scala.version}</artifactId>
+      <version>${spark.version}</version>
+      <!--      <scope>provided</scope>-->
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
+    <!--<dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_${embed.scala.version}</artifactId>
+      <version>${spark.version}</version>
+      &lt;!&ndash;<scope>provided</scope>&ndash;&gt;
+    </dependency>-->
+
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive -->
+    <!--<dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-hive_${embed.scala.version}</artifactId>
+      <version>${spark.version}</version>
+&lt;!&ndash;      <scope>provided</scope>&ndash;&gt;
+    </dependency>-->
+
+    <!--<dependency>
+      <groupId>io.delta</groupId>
+      <artifactId>delta-core_${embed.scala.version}</artifactId>
+      <version>0.7.0</version>
+    </dependency>-->
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-azure</artifactId>
+      <version>3.2.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson</groupId>
+          <artifactId>jackson-module-scala_2.11</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
+    <!--<dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming-kafka-0-10_${embed.scala.version}</artifactId>
+      <version>${spark.version}</version>
+      &lt;!&ndash;      <scope>provided</scope>&ndash;&gt;
+    </dependency>-->
+
+    <!--<dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>-->
+
+    <!--<dependency>
+      <groupId>com.crealytics</groupId>
+      <artifactId>spark-excel_2.12</artifactId>
+      <version>0.12.5</version>
+    </dependency>-->
+
+
+    <!--<dependency>
+      <groupId>com.indix</groupId>
+      <artifactId>util-spark_2.12</artifactId>
+      <version>v0.10.1</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>dfs-datastores</artifactId>
+          <groupId>com.indix</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>scala-library</artifactId>
+          <groupId>org.scala-lang</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spark-sql_2.12</artifactId>
+          <groupId>org.apache.spark</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spark-core_2.12</artifactId>
+          <groupId>org.apache.spark</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>spark-avro_2.12</artifactId>
+          <groupId>org.apache.spark</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>parquet-avro</artifactId>
+          <groupId>org.apache.parquet</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>utils-misc-spark2_2.12</artifactId>
+          <groupId>org.bdgenomics.utils</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>-->
+
+    <!--<dependency>
+        <groupId>org.typelevel</groupId>
+        <artifactId>frameless-dataset_2.11</artifactId>
+        <version>0.8.0</version>
+    </dependency>
+    <dependency>
+        <groupId>com.chuusai</groupId>
+        <artifactId>shapeless_2.11</artifactId>
+        <version>2.3.3</version>
+    </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.novocode</groupId>
+        <artifactId>junit-interface</artifactId>
+        <version>0.11</version>
+        <scope>test</scope>
+    </dependency>-->
+
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_${embed.scala.version}</artifactId>
+      <version>3.0.5</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.holdenkarau</groupId>
+      <artifactId>spark-testing-base_${embed.scala.version}</artifactId>
+      <version>3.0.1_1.0.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.microsoft.azure</groupId>
+      <artifactId>azure-keyvault</artifactId>
+      <version>1.2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.microsoft.azure</groupId>
+      <artifactId>azure-client-authentication</artifactId>
+      <version>1.7.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-storage-blob</artifactId>
+      <version>12.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.microsoft.azure</groupId>
+      <artifactId>azure-storage</artifactId>
+      <version>8.6.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.10.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.16.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.typesafe</groupId>
+      <artifactId>config</artifactId>
+      <version>1.4.0</version>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
+      </plugin>
+
+      <plugin>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>scala-maven-plugin</artifactId>
+        <version>3.3.1</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
